@@ -50,9 +50,9 @@
   - x mult (frac, frac)
   - x mult (frac, whole)
   - x mult (whole, frac)
-  - div (frac, frac)
-  - div (frac, whole)
-  - div (whole, frac)
+  - x div (frac, frac)
+  - x div (frac, whole)
+  - x div (whole, frac)
   - pow(frac, frac)
   - pow(frac, whole)
   - pow(whole, frac)
